[package]
name = "connect_four"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arr_macro = "0.1.3"
ansi_term = "0.12.1"
simple_ansi = "0.1.0"
simple-logging = "2.0.2"
log = "0.4"
indicatif = "0.16.2"
chrono = "0.4.19"